testdata/baselines/reference/submodule/compiler/cannotInvokeNewOnErrorExpression.errors.txt
cannotInvokeNewOnErrorExpression.ts(5,15): error TS2339: Property 'ClassA' does not exist on type '{}'.
cannotInvokeNewOnErrorExpression.ts(5,22): error TS1011: An element access expression should take an argument.


==== cannotInvokeNewOnErrorExpression.ts (2 errors) ====
    module M
    {
        class ClassA {}
    }
    var t = new M.ClassA[];
                  ~~~~~~
!!! error TS2339: Property 'ClassA' does not exist on type '{}'.
                         
!!! error TS1011: An element access expression should take an argument.